# C2

./: C2.rar  README.md
client/: Cargo.toml
client/src/: commands.rs  main.rs  models.rs
server/: Cargo.toml
server/modules/: enumeration.mlang
server/src/: commands.rs  main.rs  models.rs
server/src/mlang/: interpreter.rs  parser.rs
server/src/structures/: hypervisor.rs  kernel32.rs  mod.rs  system_info.rs  system_structures.rs
server/src/winapi/: kernel32.rs  mod.rs
xorcrypt/: Cargo.toml
xorcrypt/src/: lib.rs
