[package]
name = "client"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
rand = "0.8.4"
base64 = "0.22.1"
platform-dirs = "0.3.0"
hostname = "0.4.0"
whoami = "1.5.1"
sysinfo = "0.30.12"
os_info = "3.8.2"

[dependencies.xorcrypt]
path = "../xorcrypt"
