[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.12.0", features = ["full"] }
reqwest = "0.12.4"
rand = "0.8.4"
base64 = "0.22.1"
tempfile = "3.10.1"
async-recursion = "1.1.1"
log = "0.4"
libc = "0.2.155"
env_logger = "*"

[dependencies.xorcrypt]
path = "../xorcrypt"
